; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_pn532.c_kull_m_pn532_TgResponseToInitiator.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_pn532.c_kull_m_pn532_TgResponseToInitiator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.kull_m_pn532_TgResponseToInitiator.dataIn = private unnamed_addr constant [3 x i32] [i32 1, i32 32, i32 1], align 4
@PN532_MAX_LEN = common dso_local global i32 0, align 4
@PN532_CMD_TgResponseToInitiator = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kull_m_pn532_TgResponseToInitiator(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca [3 x i32], align 4
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = bitcast [3 x i32]* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast ([3 x i32]* @__const.kull_m_pn532_TgResponseToInitiator.dataIn to i8*), i64 12, i1 false)
  %8 = load i32, i32* @PN532_MAX_LEN, align 4
  %9 = sub nsw i32 %8, 2
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %4, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %5, align 8
  %13 = mul nuw i64 4, %10
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @PN532_CMD_TgResponseToInitiator, align 4
  %17 = getelementptr inbounds [3 x i32], [3 x i32]* %3, i64 0, i64 0
  %18 = call i32 @kull_m_pn532_sendrecv(i32 %15, i32 %16, i32* %17, i32 12, i32* %12, i32* %6)
  %19 = load i8*, i8** %4, align 8
  call void @llvm.stackrestore(i8* %19)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @kull_m_pn532_sendrecv(i32, i32, i32*, i32, i32*, i32*) #3

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
